--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node $NODE_DEBUG_OPTION ./bin/www"
   },
   "engines": {
     "node": "~6.2.1",
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "client-sessions": "^0.7.0",
     "cookie-parser": "~1.3.5",
     "crypto": "0.0.3",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.1",
+    "express-jwt": "^3.4.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.1.7",
     "mongodb": "^2.2.4",
@@ -23,6 +25,7 @@
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "request": "^2.74.0",
     "serve-favicon": "~2.3.0"
   }
 }
